--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,8 @@ All colors MUST be HSL.
     /* Typography Variables */
     --text-base: 1rem;
     --text-md: 1.375rem;
-    --text-md-lg: 1.625rem;
+    --text-lg: 1.625rem;
+    --text-xl: 2rem;  
     --leading-snug: 1.25;
     --leading-normal: 1.5;
     --leading-relaxed: 1.625;
@@ -64,7 +65,7 @@ All colors MUST be HSL.
 
     /* Layout Variables */
     --max-width-container: 1300px;
-    --site-header-height: 52px;
+    --site-header-height: 60px;
 
     /* Spacing Variables */
     --spacing-base: 0.25rem;
@@ -106,7 +107,7 @@ All colors MUST be HSL.
 
   /* Feature Card */
   .feature-card {
-    @apply grid md:grid-cols-2 gap-16 items-center mb-32 last:mb-0 rounded-2xl p-4;
+    @apply grid md:grid-cols-2 gap-6 items-center mb-40 last:mb-0 rounded-2xl overflow-hidden;
     background-color: var(--color-theme-card-hex);
   }
 
@@ -129,9 +130,14 @@ All colors MUST be HSL.
     font-size: var(--text-md);
   }
 
-  .text-size-md-lg {
-    font-size: var(--text-md-lg);
+  .text-size-lg {
+    font-size: var(--text-lg);
   }
+
+  .text-size-xl {
+    font-size: var(--text-xl);
+  }
+
 
   .text-color-primary {
     color: var(--color-theme-text);
